--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
+title: Analyzing and Predicting Displacement in Sub-Saharan Africa and Latin America
+markdown: kramdown
 theme: jekyll-theme-cayman
